<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_screen"
    tools:context=".ui.activitys.LoginActivity">

    <TextView
        android:id="@+id/tvMain"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:fontFamily="@font/inter_bold"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="@dimen/_24ssp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSubLogin"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_40sdp"
        android:fontFamily="@font/inter_regular"
        android:gravity="center"
        android:text="@string/welcome_back_to_the_app"
        android:textColor="@color/textcolorlight"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMain" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_25sdp"
        android:gravity="center"
        android:text="@string/email_address"
        android:textColor="@color/black"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSubLogin" />

    <EditText
        android:id="@+id/edEmail"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginHorizontal="@dimen/_25sdp"
        android:background="@drawable/bg_edit"
        android:hint="hello@exmaple.com"
        android:paddingStart="@dimen/_10sdp"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/tvEmail" />

    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center"
        android:text="@string/password"
        android:textColor="@color/black"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edEmail" />

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center"
        android:text="@string/forgot_password"
        android:textColor="@color/colorprimary"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintEnd_toEndOf="@+id/edEmail"
        app:layout_constraintTop_toBottomOf="@+id/edEmail" />

    <EditText
        android:id="@+id/edPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginHorizontal="@dimen/_25sdp"
        android:background="@drawable/bg_edit"
        android:imeOptions="actionGo"
        android:inputType="textPassword"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@+id/tvPassword" />

    <ImageView
        android:id="@+id/ivShowPassword"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:src="@drawable/eye_icon"
        android:padding="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="@+id/edPassword"
        app:layout_constraintEnd_toEndOf="@+id/edPassword"
        app:layout_constraintTop_toTopOf="@+id/edPassword" />
    <ImageView
        android:id="@+id/ivHidePassword"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:src="@drawable/ic_hide"
        android:padding="@dimen/_5sdp"
        android:visibility="gone"
        android:layout_marginEnd="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="@+id/edPassword"
        app:layout_constraintEnd_toEndOf="@+id/edPassword"
        app:layout_constraintTop_toTopOf="@+id/edPassword" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/materialCheckBox"
        style="@style/Widget.App.CheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:visibility="invisible"
        android:text="Keep Me signed in"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="@+id/edPassword"
        app:layout_constraintTop_toBottomOf="@+id/edPassword" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:backgroundTint="@color/colorprimary"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginHorizontal="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="@dimen/_15ssp"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@+id/materialCheckBox"
        tools:layout_editor_absoluteX="32dp">
    </com.google.android.material.button.MaterialButton>

    <TextView
        android:id="@+id/tvCreateAccount"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:fontFamily="@font/inter_medium"
        android:gravity="center"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:text="@string/doesn_t_have_account_create_an_account"
        android:textColor="@color/colorprimary"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>