<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_screen"
    tools:context=".ui.activitys.SignUpActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_15sdp"
        android:scrollbars="none"
        android:layout_marginBottom="@dimen/_10sdp"
        app:layout_constraintBottom_toTopOf="@+id/tvAlreadyHaveAcc"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:orientation="vertical">

            <!-- Title -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:text="Signup"
                android:textColor="@color/colorprimary"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvFN"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/first_name"
                android:textColor="@color/colorprimary"
                android:fontFamily="@font/inter_bold"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- First Name -->
            <EditText
                android:id="@+id/edfirstName"
                style="@style/commanEditTextStyle"
                android:hint="@string/first_name"
                android:inputType="textPersonName"
                android:textColorHint="@color/black"
                android:textSize="@dimen/_10ssp" />

            <TextView
                android:id="@+id/tvLN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:gravity="start"
                android:text="@string/last_name"
                android:textColor="@color/colorprimary"
                android:fontFamily="@font/inter_bold"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Last Name -->
            <EditText
                android:id="@+id/edlastName"
                style="@style/commanEditTextStyle"
                android:hint="@string/last_name"
                android:inputType="textPersonName"
                android:textColorHint="@color/black"
                android:textSize="@dimen/_10ssp" />

            <TextView
                android:id="@+id/tvE"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/email_address"
                android:layout_marginTop="@dimen/_5sdp"
                android:textColor="@color/colorprimary"
                android:fontFamily="@font/inter_bold"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <!-- Email -->
            <EditText
                android:id="@+id/edemail"
                style="@style/commanEditTextStyle"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/black"
                android:textSize="@dimen/_10ssp" />

            <!-- Phone Number -->
            <TextView
                android:id="@+id/tvP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/phone_no"
                android:textColor="@color/colorprimary"
                android:fontFamily="@font/inter_bold"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <EditText
                android:id="@+id/edphoneNumber"
                style="@style/commanEditTextStyle"
                android:hint="@string/phone_no"
                android:inputType="phone"
                android:maxLength="10"
                android:textColorHint="@color/black"
                android:textSize="@dimen/_10ssp" />

            <!-- Password -->
            <TextView
                android:id="@+id/tvPP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/password"
                android:textColor="@color/colorprimary"
                android:fontFamily="@font/inter_bold"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <EditText
                android:id="@+id/edpassword"
                style="@style/commanEditTextStyle"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColorHint="@color/black"
                android:textSize="@dimen/_10ssp" />


            <!-- Birthdate -->
            <TextView
                android:id="@+id/tvBD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="Birthdate"
                android:textColor="@color/colorprimary"
                android:fontFamily="@font/inter_bold"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edbirthdate"
                    style="@style/commanEditTextStyle"
                    android:hint="Birthdate (YYYY/DD/MM)"
                    android:inputType="date"
                    android:textColorHint="@color/black"
                    android:textSize="@dimen/_10ssp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/ivDatepicker"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:src="@drawable/ic_datepicker"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>


            <!-- Gender -->
            <EditText
                android:id="@+id/edgender"
                style="@style/commanEditTextStyle"
                android:hint="Gender"
                android:inputType="text"
                android:textColorHint="@color/black"
                android:visibility="gone" />

            <!-- Country -->
            <EditText
                android:id="@+id/edcountry"
                style="@style/commanEditTextStyle"
                android:hint="Country"
                android:inputType="text"
                android:visibility="gone" />

            <!-- State -->
            <EditText
                android:id="@+id/edstate"
                style="@style/commanEditTextStyle"
                android:hint="State"
                android:inputType="text"
                android:visibility="gone" />

            <!-- City -->
            <EditText
                android:id="@+id/edcity"
                style="@style/commanEditTextStyle"
                android:hint="City"
                android:inputType="text"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tvGen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="Gender"
                android:textColor="@color/colorprimary"
                android:fontFamily="@font/inter_bold"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.App.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@color/white"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <AutoCompleteTextView
                    android:id="@+id/genderPicker"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:inputType="none"
                    android:text="Choose Gender" />


            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/tvCoun"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="Country"
                android:textColor="@color/colorprimary"
                android:fontFamily="@font/inter_bold"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.App.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                app:boxBackgroundColor="@color/white"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <AutoCompleteTextView
                    android:id="@+id/countryPicker"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:inputType="none"
                    android:text="Choose Country" />


            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/tvState"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="State"
                android:textColor="@color/colorprimary"
                android:fontFamily="@font/inter_bold"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.App.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                app:boxBackgroundColor="@color/white"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <AutoCompleteTextView
                    android:id="@+id/statePicker"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:inputType="none"
                    android:text="Choose State" />


            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="City"
                android:textColor="@color/colorprimary"
                android:fontFamily="@font/inter_bold"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.App.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                app:boxBackgroundColor="@color/white"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <!-- Inside text input layout add
                      an auto complete text view
                        and make its input type to none-->
                <AutoCompleteTextView
                    android:id="@+id/cityPicker"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:inputType="none"
                    android:text="Choose City" />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSingUP"
                android:background="@drawable/bg_button"
                app:backgroundTint="@color/colorprimary"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:backgroundTint="@color/colorprimary"
                android:fontFamily="@font/inter_medium"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:textSize="@dimen/_15ssp"
                android:visibility="visible"
                app:layout_constraintBottom_toTopOf="@+id/tvAlreadyHaveAcc" />

        </LinearLayout>


    </ScrollView>
    <!-- Signup Button -->

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/materialCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:checked="false"
        android:text="By continuing, you agree to our terms of service."
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/scrollView2"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/tvAlreadyHaveAcc"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:gravity="center"
        android:text="@string/already_have_an_account_sign_in_here"
        android:textColor="@color/black"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>